Bug 138160 - If sidebar tab is activated by an extension the minimal width of the tab is ignored
Summary: If sidebar tab is activated by an extension the minimal width of the tab is i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Ilhan Yesil
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2020-11-12 12:33 UTC by Ilhan Yesil
Modified: 2021-09-06 08:23 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Test extension (21.27 KB, application/zip)
2020-11-12 12:37 UTC, Ilhan Yesil
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ilhan Yesil 2020-11-12 12:33:45 UTC
Description:
An extension can define it's own tabpage on the sidebar together with it's own button, that activates the tabpage. If the tabpage is defined with a minimal width and it's not activated by clicking on the button but via UNO-API, the minimal width is ignored. 

Steps to Reproduce:
1. Install the attached test extension. After installation open writer. On the sidebar, there is a new button "A1". If the tabpage isnot already shown click on "A1". The tabpage will be shown with it's minimal width of 600 pixel.
2. Click on "Properties" and reduce the width of the sidebar using the splitter.
3. The extension has installed also a top menu called "Test extension" with the menu entry "Action", click on it.

Actual Results:
The new tabpage is shown without being enlarged to the minimal width.

Expected Results:
The sidebar should check if the tabpage has defined a minimal width and enlarge it's width if needed.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.4.8.0.0+ (x64)
Build ID: be48c5b2719b66a35a8920550ebee6e45f266cc6
CPU threads: 12; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: threaded
Comment 1 Ilhan Yesil 2020-11-12 12:37:48 UTC
Created attachment 167236 [details]
Test extension
Comment 2 Ilhan Yesil 2020-11-12 12:38:41 UTC
Self confirming according to https://wiki.documentfoundation.org/QA/Guidelines_for_public_and_private_sector_deployments. Issue has originally been reported by another user in our internal issue tracker.
Comment 3 Heiko Tietze 2020-12-02 12:54:30 UTC
Quite a corner case, isn't it? How about the argument that minimal width is relevant in case of manual sizing only. Or in other words: What do you suggest to do?
Comment 4 Ilhan Yesil 2020-12-10 08:58:47 UTC
We need a minimal width in our extension to display all controls adequate, so if it is defined, LO should consider it.
Comment 5 andreas_k 2020-12-10 09:06:49 UTC
I'm also for a global minimal, standard and maximal sidebar width (which can be changed by the user). So that everybody how do UI work can test sidebar stuff according this 3 widths.
Comment 6 Commit Notification 2020-12-22 23:20:10 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7206de4f3d9eecdcbdd98294fa50f01c4c9ece9c

tdf#138160 Set minimal width of sidebar tabpage after UNO call

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2021-03-31 14:00:13 UTC
A polite ping to Ilhan Yesil:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
Otherwise, Could you please explain what's missing?
Thanks