tdf#138160 Set minimal width of sidebar tabpage after UNO call

Call OpenThenToggleDeck in SidebarController instead SwitchToDeck
to ensure the minimal width of the tabpage is considered and
the width of the sidebar is set correctly.

Change-Id: I27c21572b5c648b3ddbb4d908d40af686ac87a9a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105758
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>